tests/paczka2/big_fuzzy/91077624.err
Error in line 16: snc A218 55,4
Error in line 19: snc S115 -1,8
Error in line 18: snc S115 17,8
Error in line 38: snc S115 7,
Error in line 36: snc A263 1,5
Error in line 28: S819 A263 29,3
Error in line 41: S819 S819 72,3
Error in line 34: ZHW7O A263 2,1
Error in line 35: 2OhS A263 20,8
Error in line 53: snc A218 51,8
Error in line 51: S819 S115 97,8
Error in line 60: snc S115 64,03
Error in line 37: YYmZb4 S819 25,0
Error in line 55: snc S115 85,7
Error in line 65: dr6pi A263 25,0
Error in line 70: S819 S819 14,4
Error in line 74: dr6pi S819 28,2
Error in line 69: YYmZb4 A263 23,2
Error in line 85: YYmZb4 S115 20,6
Error in line 86: pak S115 37,8
Error in line 90: snc A263 88,6
Error in line 94: ZHW7O A218 42,0
Error in line 105: pak S115 82,1
Error in line 110: YYmZb4 A263 47,1
Error in line 113: dr6pi A218 58,2
Error in line 130: dr6pi A263 53,0
Error in line 124: YYmZb4 S819 95,4
Error in line 141: 2OhS S115 31,2
Error in line 143: snc S819 146,4
Error in line 146: YYmZb4 A218 106,5
Error in line 165: YYmZb4 S115 79,9
Error in line 166: dr6pi A263 7,6
Error in line 197: dr6pi S115 24,9
Error in line 199: dr6pi A263 47,0
Error in line 205: YYmZb4 A218 38,3
Error in line 218: dr6pi A263 51,9
Error in line 219: dr6pi A218 52,3
Error in line 210: snc A263 231,2
Error in line 230: 2OhS A263 100,2
Error in line 220: pak S115 27,8
Error in line 234: pak A218 30,4
Error in line 236: pak A263 61,3
Error in line 244: ZHW7O A218 38,4
